[gd_scene load_steps=4 format=4 uid="uid://bl6e6hkuxb5bt"]

[ext_resource type="Script" uid="uid://dbhjhfcqol8hu" path="res://Prefab/TowerDefense/GUI/InGame/WaveManager/TowerDefenseInGameWaveManager.gd" id="1"]
[ext_resource type="FontFile" uid="uid://coqskwlqtnypf" path="res://Asset/Font/fzkt.ttf" id="2"]
[ext_resource type="PackedScene" uid="uid://tatjpjdsp6lb" path="res://Prefab/GUI/ProgressMeter/GeneralProgressMeter.tscn" id="3"]

[node name="TowerDefenseInGameWaveManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.007
anchor_top = 1.0
anchor_right = 1.007
anchor_bottom = 1.0
offset_left = -974.56
offset_top = -30.0
offset_right = -262.56
alignment = 2

[node name="LevelNameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "PLAYERS_MORDEN_LEVEL_NAME"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DifficultLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 16
text = "PLAYERS_MORDEN_LEVEL_NAME"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GeneralProgressMeter" parent="HBoxContainer" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
layout_mode = 2
